// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OBCUrlComponent matches snapshot 1`] = `
<a
  href="https://google.com/1"
  rel="noopener"
  target="_blank"
>
  Post details
</a>
`;

exports[`OBCUrlComponent matches snapshot when id is a string 1`] = `
<a
  href="https://google.com/1"
  rel="noopener"
  target="_blank"
>
  Post details
</a>
`;

exports[`OBCUrlComponent matches snapshot when isButton is true 1`] = `
<LinkButton
  className="post-data-button "
  isExternal={true}
  toLink="https://google.com/1"
>
  Post details
</LinkButton>
`;

exports[`OBCUrlComponent matches snapshot when type is "country" 1`] = `
<a
  href="https://google.com/1"
  rel="noopener"
  target="_blank"
>
  Country details
</a>
`;

exports[`OBCUrlComponent matches snapshot when type is "post-data" 1`] = `
<a
  href="https://google.com/1"
  rel="noopener"
  target="_blank"
>
  Post details
</a>
`;
